# leakheaders

./: LICENSE  README.md  pyproject.toml
src/header_leak/: cli.py  core.py
src/leakheaders/: __init__.py  cli.py
tests/: test_core.py
